# contract-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  swap_test_fixed.sh
.claude/: settings.local.json
.devcontainer/: init-firewall.sh
src/: config.rs  main.rs  server.rs
src/ethereum/: abi.rs  contract.rs  mod.rs  provider.rs  utils.rs
test_config/: config.toml
