[package]
name = "contract-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.6", features = ["full", "provider-http", "sol-types", "rpc-types"] }
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
tokio = { version = "1.0", features = ["full", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
hex = "0.4"
schemars = "0.8"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"
tempfile = "3.0"
toml = "0.8"
